--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "files": [
+        "index.js"
+    ],
     "keywords": [
         "pwd",
         "password",
         "level"
     ],
+    "homepage": "https://github.com/lcysgsg/check-pwd-strength",
     "author": "lcysgsg",
     "license": "ISC"
 }
